Implementing loading game.